10주차_kakao 네이티브 앱 키 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,21 @@
             android:exported="true"/>
         <activity android:name=".ui.signin.LoginActivity"/>
         <activity android:name=".ui.signup.SignUpActivity"/>
+        <activity
+            android:name=".GlobalApplication" />
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data android:host="oauth"
+                    android:scheme="kakao9ef3bde45dc081bb5e0a987ee69d53a5" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
